# fast-api-docker-quickstart

./: Dockerfile  app.py  index.html  pyproject.toml  readme.md
fastapi_template/: app.py
local/: build.sh  run.sh
templates/: index.html
