[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["Emmanuel <kipronofb@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.28.0"
jinja2 = "^3.1.3"
fastapi = "^0.115.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
